--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.vsidx
 
 # Build results
 [Dd]ebug/
@@ -75,5 +76,4 @@ artifacts/
 *.suo
 *.user
 *.userosscache
-
 *.sln.docstates 
