Started post domain work
Included new BaseEntity model that uses a guid Id instead of an integer.
Added key tracking fields for all entities.

--- a/Whispers.Chat/src/Whispers.Chat.Core/Whispers.Chat.Core.csproj
+++ b/Whispers.Chat/src/Whispers.Chat.Core/Whispers.Chat.Core.csproj
@@ -14,10 +14,13 @@
   <ItemGroup>
     <Folder Include="BoundedContexts\IdentityAndUsers\Entities\" />
     <Folder Include="BoundedContexts\IdentityAndUsers\Events\" />
-    <Folder Include="BoundedContexts\Posts\Entities\" />
     <Folder Include="BoundedContexts\Posts\Events\" />
     <Folder Include="BoundedContexts\SiteModeration\Entities\" />
     <Folder Include="BoundedContexts\SiteModeration\Events\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Whispers.Chat.SharedKernel\Whispers.Chat.SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
