--- a/Whispers.Chat/Whispers.Chat.SharedKernel/Whispers.Chat.SharedKernel.csproj
+++ b/Whispers.Chat/Whispers.Chat.SharedKernel/Whispers.Chat.SharedKernel.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.1.3" />
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" />
+    <PackageReference Include="Ardalis.SharedKernel" />
+  </ItemGroup>
 
 </Project>
