--- a/Whispers.Chat/tests/Whispers.Chat.FunctionalTests/Whispers.Chat.FunctionalTests.csproj
+++ b/Whispers.Chat/tests/Whispers.Chat.FunctionalTests/Whispers.Chat.FunctionalTests.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.1.3" />
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Shouldly" />
