--- a/Whispers.Chat/src/Whispers.Chat.Web/Whispers.Chat.Web.csproj
+++ b/Whispers.Chat/src/Whispers.Chat.Web/Whispers.Chat.Web.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Whispers.Chat.ServiceDefaults\Whispers.Chat.ServiceDefaults.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MinimalApis\" />
+  </ItemGroup>
+
 </Project>
