--- a/Whispers.Chat/src/Whispers.Chat.Web/appsettings.Development.json
+++ b/Whispers.Chat/src/Whispers.Chat.Web/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../Whispers.Chat.Infrastructure/Data/database.sqlite"
+    "DefaultConnection": "Data Source=WhisperChat.db",
+    "SqliteConnection": "Data Source=WhisperChat.db"
   },
   "Logging": {
     "LogLevel": {
