--- a/Whispers.Chat/src/Whispers.Chat.Web/appsettings.json
+++ b/Whispers.Chat/src/Whispers.Chat.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\v11.0;Database=cleanarchitecture;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqliteConnection": "Data Source=database.sqlite"
+    "DefaultConnection": "Data Source=WhisperChat",
+    "SqliteConnection": "Data Source=WhisperChat"
   },
   "Serilog": {
     "MinimumLevel": {
