--- a/Whispers.Chat/src/Whispers.Chat.Core/Whispers.Chat.Core.csproj
+++ b/Whispers.Chat/src/Whispers.Chat.Core/Whispers.Chat.Core.csproj
@@ -20,8 +20,7 @@
   <ItemGroup>
     <Folder Include="BoundedContexts\IdentityAndUsers\Entities\" />
     <Folder Include="BoundedContexts\Posts\Events\" />
-    <Folder Include="BoundedContexts\SiteModeration\Entities\" />
-    <Folder Include="BoundedContexts\SiteModeration\Events\" />
+    <Folder Include="BoundedContexts\Moderation\Entities\" />
   </ItemGroup>
 
   <ItemGroup>
