--- a/Whispers.Chat/src/Whispers.Chat.UseCases/Whispers.Chat.UseCases.csproj
+++ b/Whispers.Chat/src/Whispers.Chat.UseCases/Whispers.Chat.UseCases.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\Whispers.Chat.Core\Whispers.Chat.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Moderation\" />
+    <Folder Include="Users\Create\" />
+    <Folder Include="Users\Delete\" />
+  </ItemGroup>
+
 </Project>
